--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 </head>
 <body>
   <h1>Welcome to My Website</h1>
-  <p>Thank you for visiting my website. I hope you find it informative and enjoyable.</p>
+  <p>Thank you for visiting Wenkai's website. I hope you find it informative and enjoyable (but i think you don't at all lol).</p>
   <div class="contact-info">
     <p>If you have any questions or inquiries, please feel free to contact me:</p>
-    <p>Email: <a href="mailto:zengwenkai8@gmail.com">your-email@example.com</a></p>
+    <p>Email: <a href="mailto:zengwenkai8@gmail.com">zengwenkai8@gmail.com</a></p>
   </div>
 </body>
 </html>
